--- a/project-nest_typeorm/package.json
+++ b/project-nest_typeorm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nest_app",
+  "name": "project-nest_typeorm",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -21,37 +21,19 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.2.0",
-    "@nestjs/core": "^10.3.3",
-    "@nestjs/event-emitter": "^2.0.4",
-    "@nestjs/jwt": "^10.2.0",
-    "@nestjs/mongoose": "^10.0.4",
-    "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.3.3",
-    "@nestjs/swagger": "^7.3.0",
-    "bcrypt": "^5.1.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "connect-mongo": "^5.1.0",
-    "cookie-parser": "^1.4.6",
-    "crypto-js": "^4.2.0",
-    "dotenv": "^16.4.5",
-    "express-session": "^1.18.0",
-    "mongoose": "^8.2.1",
-    "multer": "^1.4.5-lts.1",
-    "passport-jwt": "^4.0.1",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
+    "mysql2": "^3.9.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "zod": "^3.22.4"
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/bcrypt": "^5.0.2",
-    "@types/cookie-parser": "^1.4.7",
-    "@types/express": "^4.17.21",
-    "@types/express-session": "^1.18.0",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
