--- a/User_Post_App/package.json
+++ b/User_Post_App/package.json
@@ -18,6 +18,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.1",
+    "nodemailer": "^6.9.12",
     "nodemon": "^3.0.3",
     "sequelize": "^6.37.1",
     "sequelize-cli": "^6.6.2"
